# inventraX

mobile/: IMPLEMENTATION_SUMMARY.md  QR_CODE_GUIDE.md  QUICKSTART.md  README_MOBILE.md  pubspec.yaml
mobile/ios/Runner/: Info.plist
mobile/lib/: main.dart
mobile/lib/models/: dashboard_stats.dart  product.dart  user.dart
mobile/lib/providers/: auth_provider.dart
mobile/lib/screens/: check_in_screen.dart  check_out_screen.dart  dashboard_screen.dart  home_screen.dart  login_screen.dart  signup_screen.dart
mobile/lib/services/: api_service.dart
rag-backend/: main.py  pyproject.toml  test_with_data.py
rag-backend/utils/: fcns.py
sql/: creates.sql
sql/migrations/: mig-20251003_104606-init.sql  mig-20251013_181158-added_user_password_field.sql
sql/scripts/: migrate.sh  setup.sh
web/: package.json  pnpm-lock.yaml
web/.github/instructions/: instructions.instructions.md
web/actions/: dashboard.ts  data.ts  products.ts  staff.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/categories/: route.ts
web/app/api/products/: route.ts
web/app/api/staff/: route.ts
web/app/dashboard/: page.tsx
web/app/data/: page.tsx
web/app/inventory/: README.md
web/app/inventory/check-in/: page.tsx
web/app/login/: page.tsx
web/app/natural/: page.tsx
web/app/products/: page.tsx
web/app/register/: page.tsx
web/app/staff/: page.tsx
web/components/: sidebar.tsx  site-header.tsx  theme-toggle.tsx
web/components/auth/: login-form.tsx  signup-form.tsx
web/components/brand/: logo.tsx
web/contexts/: auth-context.tsx
web/lib/: auth.ts  db.ts
(+19 files in other folders)
