[project]
name = "rag-backend"
version = "0.1.0"
description = "A backend for inventory management system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.118.0",
    "langchain-community>=0.3.30",
    "langchain-google-genai>=2.1.12",
    "langchain-google-vertexai>=2.1.2",
    "langchain[google-genai]>=0.3.27",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.2.10",
    "uvicorn>=0.37.0",
]
